# rustiful-backend

./: .env  Cargo.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: rust.yml
binaries/: Cargo.toml
binaries/src/: error.rs  main.rs  routes.rs  schemas.rs
external_dependency/: Cargo.toml
external_dependency/macro_dependency/: Cargo.toml
external_dependency/macro_dependency/src/: lib.rs
external_dependency/macros/: Cargo.toml
external_dependency/macros/src/: lib.rs
external_dependency/src/: lib.rs
migrations/: 20230527155502_board_table.down.sql  20230527155502_board_table.up.sql  20230602111013_comment.down.sql  20230602111013_comment.up.sql  20230621082554_user_schema.down.sql  20230621082554_user_schema.up.sql  20230623073050_outbox_schema.down.sql  20230623073050_outbox_schema.up.sql
service_library/: Cargo.toml
service_library/src/: bootstrap.rs  lib.rs
service_library/src/adapters/: database.rs  mod.rs  outbox.rs  repository.rs
service_library/src/adapters/repositories/: auth_repository.rs  board_repository.rs  mod.rs
service_library/src/domain/: builder.rs  commands.rs  mod.rs
service_library/src/domain/auth/: entity.rs  events.rs  mod.rs
service_library/src/domain/board/: commands.rs  events.rs  mod.rs
service_library/src/macros/: mod.rs
service_library/src/services/: handlers.rs  messagebus.rs  unit_of_work.rs
service_library/src/utils/: errors.rs  mod.rs  test_components.rs
tests/: database.rs  helpers.rs  outbox.rs  repository.rs  service.rs
