[package]
name = "rustiful"
version = "0.1.0"
edition = "2021"


[[bin]]
name="bin"
path = "bin/src/main.rs"


[dependencies]
library = {path="./library"}
bin={path="./bin"}
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics","serde" ]}
chrono = "*"
time = "*"
async-trait = {version="*"}
sqlx = { version = "*", features = [ "runtime-tokio-rustls", "migrate", "postgres","uuid","chrono","offline"] }
tokio = { version = "*", features = ["rt", "macros"] }
futures ={version="*"}
dotenv={version="*"}
serde = {version="*",features=["derive"]}
serde_json = "*"
bcrypt = "*"
axum = {version="*"}
axum-macros = {version="*"}
utoipa = {version="*",features=["axum_extras","uuid"]}
utoipa-swagger-ui = { version="*" , features=["axum"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace","cors"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
downcast-rs ="*"