[package]
name = "binaries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service_library = {path="../service_library"}
tokio = { version = "1.1.1", features = ["full"] }
dotenv={version="*"}
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics","serde" ]}

axum = {version="*"}
axum-macros = {version="*"}
serde = {version="*",features=["derive"]}
serde_json = "*"
utoipa = {version="*",features=["axum_extras","uuid"]}
utoipa-swagger-ui = { version="*" , features=["axum"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }