[package]
name = "external_dependency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_dependency ={path="./macro_dependency"}
macros ={path="./macros"}

serde = {version="*",features=["derive"]}
serde_json = "*"
