[package]
name = "macro_dependency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
downcast-rs ="*"
uuid = { version = "1.3.3", features = ["v4", "fast-rng", "macro-diagnostics","serde" ]}
chrono = {version = "*" , features=["serde"]}
serde = {version="*",features=["derive"]}
serde_json = "*"
