[package]
name = "macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
macro_dependency = {path = "../macro_dependency"}
syn = {version="*", features=["extra-traits"]}
quote = {version="*"}
proc-macro2="*"

serde = {version="*",features=["derive"]}
serde_json = "*"

[dev-dependencies]
trybuild = {version="*",features=["diff"]}
